--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,3 @@
-
-# Created by https://www.gitignore.io/api/git,java,intellij
-# Edit at https://www.gitignore.io/?templates=git,java,intellij
-
-### Git ###
-# Created by git for backups. To disable backups in Git:
-# $ git config --global mergetool.keepBackup false
-*.orig
-
-# Created by git when using merge tools for conflicts
-*.BACKUP.*
-*.BASE.*
-*.LOCAL.*
-*.REMOTE.*
-*_BACKUP_*.txt
-*_BASE_*.txt
-*_LOCAL_*.txt
-*_REMOTE_*.txt
-
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -122,3 +103,5 @@ fabric.properties
 hs_err_pid*
 
 # End of https://www.gitignore.io/api/git,java,intellij
+*.xml
+*.iml
